[bugfix] Minor tweaks to get Code-coverage up&running again