@@ -63,9 +63,6 @@
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -83,7 +80,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
+                <version>0.8.4</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
